--- a/content/posts/weblog/zack/2019/12/upgrading-gatsby-to-mdx-from-remark.mdx
+++ b/content/posts/weblog/zack/2019/12/upgrading-gatsby-to-mdx-from-remark.mdx
@@ -1,10 +1,10 @@
 ---
-title: 'Upgrading Gatsby to MDX from Remark'
-date: '2019-12-17'
+title: "Upgrading Gatsby to MDX from Remark"
+date: "2019-12-17"
 lead: "In which we add technology for technology's sake."
 ---
 
-import TodoApp from './TodoApp';
+import TodoApp from "./TodoApp";
 
 As is my usual habit, once I've upgraded something I cannot resist continuously
 tweaking with it until I get bored. In doing so, I frequently fail to actually
@@ -13,6 +13,8 @@ place. But no matter that now, we've added more technlogy!
 
 Behold, a trivial Todo app _inside_ a blog post!
 
+```
+Ed: temporarily disabled while we upgrate the website's underpinnings.
 <TodoApp
   initialTodos={[
     'Create Todos',
@@ -20,6 +22,7 @@ Behold, a trivial Todo app _inside_ a blog post!
     'Backspace deletes empty items',
   ]}
 />
+```
 
 How amazing is this? Right? I guess? Maybe I should explain what's happening
 here.
@@ -92,11 +95,11 @@ own markdown files! For example, to get the TodoApp earlier in the article, the
 beginning of this post looks like:
 
 ```mdx
-import TodoApp from './TodoApp';
+import TodoApp from "./TodoApp";
 
 Behold, a trivial Todo app _inside_ a blog post!
 
-<TodoApp initialTodos={['Create Todos']} />
+<TodoApp initialTodos={["Create Todos"]} />
 ```
 
 The only other thing I did to support my new capabilities was to install [syntax
